Merged agv branch with main and added common as a library module